--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "author": "uday",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "husky": "^8.0.3",
@@ -31,6 +33,7 @@
     "sequelize": "^6.35.2"
   },
   "devDependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
     "eslint-config-standard": "^17.1.0",
