--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "todo managing ",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -e js, ejs",
+    "start": "nodemon -e js,ejs",
     "start:prod": "node index.js",
-    "pretest": "cross-env NODE_ENV=test && npx sequelize-cli db:drop && cross-env NODE_ENV=test npx sequelize-cli db:migrate",
-    "test": "cross-env NODE_ENV=test jest --detectOpenHandles",
+    "pretest": "SET NODE_ENV=test&& npx sequelize-cli db:drop && SET NODE_ENV=test&& npx sequelize-cli db:create",
+    "test": "jest --detectOpenHandles",
     "prepare": "husky install"
   },
   "lint-staged": {
@@ -25,12 +25,12 @@
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.6",
-    "csurf": "^1.11.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "husky": "^8.0.3",
     "pg": "^8.11.3",
-    "sequelize": "^6.35.2"
+    "sequelize": "^6.35.2",
+    "tiny-csrf": "^1.1.4"
   },
   "devDependencies": {
     "cheerio": "^1.0.0-rc.12",
